; ModuleID = '/home/carl/AnghaBench/linux/drivers/i3c/master/extr_dw-i3c-master.c_dw_i3c_master_send_ccc_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i3c/master/extr_dw-i3c-master.c_dw_i3c_master_send_ccc_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i3c_master_controller = type { i32 }
%struct.i3c_ccc_cmd = type { i64, i64 }
%struct.dw_i3c_master = type { i32 }

@I3C_CCC_ENTDAA = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i3c_master_controller*, %struct.i3c_ccc_cmd*)* @dw_i3c_master_send_ccc_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dw_i3c_master_send_ccc_cmd(%struct.i3c_master_controller* %0, %struct.i3c_ccc_cmd* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.i3c_master_controller*, align 8
  %5 = alloca %struct.i3c_ccc_cmd*, align 8
  %6 = alloca %struct.dw_i3c_master*, align 8
  %7 = alloca i32, align 4
  store %struct.i3c_master_controller* %0, %struct.i3c_master_controller** %4, align 8
  store %struct.i3c_ccc_cmd* %1, %struct.i3c_ccc_cmd** %5, align 8
  %8 = load %struct.i3c_master_controller*, %struct.i3c_master_controller** %4, align 8
  %9 = call %struct.dw_i3c_master* @to_dw_i3c_master(%struct.i3c_master_controller* %8)
  store %struct.dw_i3c_master* %9, %struct.dw_i3c_master** %6, align 8
  store i32 0, i32* %7, align 4
  %10 = load %struct.i3c_ccc_cmd*, %struct.i3c_ccc_cmd** %5, align 8
  %11 = getelementptr inbounds %struct.i3c_ccc_cmd, %struct.i3c_ccc_cmd* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @I3C_CCC_ENTDAA, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i32, i32* @EINVAL, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %3, align 4
  br label %33

18:                                               ; preds = %2
  %19 = load %struct.i3c_ccc_cmd*, %struct.i3c_ccc_cmd** %5, align 8
  %20 = getelementptr inbounds %struct.i3c_ccc_cmd, %struct.i3c_ccc_cmd* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load %struct.dw_i3c_master*, %struct.dw_i3c_master** %6, align 8
  %25 = load %struct.i3c_ccc_cmd*, %struct.i3c_ccc_cmd** %5, align 8
  %26 = call i32 @dw_i3c_ccc_get(%struct.dw_i3c_master* %24, %struct.i3c_ccc_cmd* %25)
  store i32 %26, i32* %7, align 4
  br label %31

27:                                               ; preds = %18
  %28 = load %struct.dw_i3c_master*, %struct.dw_i3c_master** %6, align 8
  %29 = load %struct.i3c_ccc_cmd*, %struct.i3c_ccc_cmd** %5, align 8
  %30 = call i32 @dw_i3c_ccc_set(%struct.dw_i3c_master* %28, %struct.i3c_ccc_cmd* %29)
  store i32 %30, i32* %7, align 4
  br label %31

31:                                               ; preds = %27, %23
  %32 = load i32, i32* %7, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %31, %15
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local %struct.dw_i3c_master* @to_dw_i3c_master(%struct.i3c_master_controller*) #1

declare dso_local i32 @dw_i3c_ccc_get(%struct.dw_i3c_master*, %struct.i3c_ccc_cmd*) #1

declare dso_local i32 @dw_i3c_ccc_set(%struct.dw_i3c_master*, %struct.i3c_ccc_cmd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
